# rust_dist

./: Cargo.toml  README.md  build.rs
proto/: record.proto
src/: lib.rs  main.rs  record.rs  server.rs
src/log/: config.rs  index.rs  mod.rs  segment.rs  store.rs
src/log/tests/: index_test.rs  log_test.rs  mod.rs  segment_test.rs  store_test.rs
src/routes/: consume.rs  mod.rs  produce.rs
