[package]
name = "proglog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "proglog"

[dependencies]
anyhow = "1.0.61"
axum = "0.5.15"
byteorder = "1.4.3"
bytes = "1.2.1"
hyper = { version = "0.14.14", features = ["full"] }
serde = { version = "1.0.143", features = ["derive"]}
serde_bytes = "0.11.7"
tempfile = "3.3.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4.10"
